--- a/package.json
+++ b/package.json
@@ -9,9 +9,7 @@
   },
   "scripts": {
     "clean": "gulp clean",
-    "compile": "gulp compile",
     "build": "gulp build",
-    "rebuild": "gulp clean & gulp build",
     "start": "concurrently --kill-others \"gulp watch\" \"lite-server\"",
     "postinstall": "typings install"
   },
@@ -37,7 +35,7 @@
     "gulp": "^3.9.1",
     "gulp-clean-css": "^2.0.12",
     "gulp-concat": "^2.6.0",
-    "gulp-inject": "^4.1.0",
+    "gulp-html-replace": "^1.6.1",
     "gulp-sass": "^2.3.2",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-tslint": "^6.1.1 ",
