--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "gulp-concat": "^2.6.0",
     "gulp-html-replace": "^1.6.1",
     "gulp-sass": "^2.3.2",
+    "gulp-sourcemaps": "^1.6.0",
     "gulp-tslint": "^6.1.1 ",
     "gulp-typescript": "^2.13.6",
     "gulp-uglify": "^2.0.0",
