--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "3.0.0",
     "@angular/upgrade": "2.0.0",
     "core-js": "^2.4.1",
+    "ng2-translate": "^2.5.0",
     "reflect-metadata": "^0.1.3",
     "rxjs": "5.0.0-beta.12",
     "systemjs": "0.19.27",
