--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "3.0.0",
     "@angular/upgrade": "2.0.0",
     "core-js": "^2.4.1",
+    "lodash": "^4.16.2",
     "reflect-metadata": "^0.1.3",
     "rxjs": "5.0.0-beta.12",
     "systemjs": "0.19.27",
@@ -40,6 +41,7 @@
     "gulp-tslint": "^6.1.1 ",
     "gulp-typescript": "^2.13.6",
     "gulp-uglify": "^2.0.0",
+    "gulp-watch": "^4.3.10",
     "lite-server": "^2.2.2",
     "run-sequence": "^1.2.2",
     "systemjs-builder": "^0.15.32",
