--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "gulp-concat": "^2.6.0",
     "gulp-flatten": "^0.3.1",
     "gulp-html-replace": "^1.6.1",
+    "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.3.2",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-tslint": "^6.1.1 ",
@@ -49,6 +50,7 @@
     "ts-node": "^1.3.0",
     "tslint": "^3.5.0",
     "typescript": "^2.0.2",
-    "typings": "^1.3.3"
+    "typings": "^1.3.3",
+    "yargs": "^6.0.0"
   }
 }
