--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "gulp-concat": "^2.6.0",
     "gulp-flatten": "^0.3.1",
     "gulp-html-replace": "^1.6.1",
+    "gulp-jsonminify": "^1.0.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.3.2",
     "gulp-sourcemaps": "^1.6.0",
