--- a/package.json
+++ b/package.json
@@ -33,11 +33,10 @@
     "concurrently": "^2.2.0",
     "del": "^2.2.0",
     "gulp": "^3.9.1",
-    "gulp-angular-embed-templates": "^2.3.0",
     "gulp-clean-css": "^2.0.12",
     "gulp-concat": "^2.6.0",
-    "gulp-flatten": "^0.3.1",
     "gulp-html-replace": "^1.6.1",
+    "gulp-inline-ng2-template": "^3.0.1",
     "gulp-jsonminify": "^1.0.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.3.2",
@@ -45,6 +44,7 @@
     "gulp-tslint": "^6.1.1 ",
     "gulp-typescript": "^2.13.6",
     "gulp-uglify": "^2.0.0",
+    "html-minifier": "^3.1.0",
     "lite-server": "^2.2.2",
     "run-sequence": "^1.2.2",
     "systemjs-builder": "^0.15.32",
