--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/upgrade": "2.0.0",
     "core-js": "^2.4.1",
     "lodash": "^4.16.2",
+    "ng2-auto-complete": "^0.7.0",
     "ng2-translate": "^2.5.0",
     "reflect-metadata": "^0.1.3",
     "rxjs": "5.0.0-beta.12",
