--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "gulp": "^3.9.1",
     "gulp-clean-css": "^2.0.12",
     "gulp-concat": "^2.6.0",
+    "gulp-concat-css": "^2.3.0",
     "gulp-html-replace": "^1.6.1",
     "gulp-inline-ng2-template": "^3.0.1",
     "gulp-jsonminify": "^1.0.0",
