--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
     "lodash": "^4.16.2",
+    "moment": "^2.16.0",
     "ng2-translate": "^2.5.0",
     "reflect-metadata": "^0.1.3",
     "rxjs": "5.0.0-beta.12",
