--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "concurrently": "^2.2.0",
     "del": "^2.2.0",
     "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^3.1.1",
     "gulp-clean-css": "^2.0.12",
     "gulp-concat": "^2.6.0",
     "gulp-concat-css": "^2.3.0",
