--- a/.tx/config
+++ b/.tx/config
@@ -2,7 +2,7 @@
 host = https://www.transifex.com
 
 [justmatch-frontend.enjson]
-file_filter = i18n/<lang>.json
-source_file = i18n/en.json
+file_filter = src/assets/i18n/<lang>.json
+source_file = src/assets/i18n/en.json
 source_lang = en
 type = KEYVALUEJSON
