--- a/package.json
+++ b/package.json
@@ -1,17 +1,23 @@
 {
-  "name": "ng-cli-test-scss",
+  "name": "just-arrived-web",
   "version": "0.0.0",
   "license": "MIT",
   "angular-cli": {},
+  "engines": {
+    "node": "6.9.1",
+    "npm": "3.10.8"
+  },
   "scripts": {
-    "start": "ng serve",
+    "start": "node server.js",
+    "start-dev": "ng serve",
     "start-prod": "ng serve --prod",
     "build": "ng build --prod --env=prod",
     "build-aot": "ng build --prod --aot --env=prod",
     "lint": "tslint \"src/**/*.ts\"",
     "test": "ng test",
     "pree2e": "webdriver-manager update",
-    "e2e": "protractor"
+    "e2e": "protractor",
+    "postinstall": "ng build --aot -prod"
   },
   "private": true,
   "dependencies": {
@@ -25,6 +31,7 @@
     "@angular/router": "3.2.1",
     "bootstrap": "^4.0.0-alpha.5",
     "core-js": "^2.4.1",
+    "express": "^4.14.0",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "lodash": "^4.17.2",
