--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@angular/platform-browser": "2.2.1",
     "@angular/platform-browser-dynamic": "2.2.1",
     "@angular/router": "3.2.1",
+    "angular2-google-maps": "^0.17.0",
     "bootstrap": "^4.0.0-alpha.5",
     "core-js": "^2.4.1",
     "express": "^4.14.0",
