--- a/package.json
+++ b/package.json
@@ -21,14 +21,17 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "2.2.1",
-    "@angular/compiler": "2.2.1",
-    "@angular/core": "2.2.1",
-    "@angular/forms": "2.2.1",
-    "@angular/http": "2.2.1",
-    "@angular/platform-browser": "2.2.1",
-    "@angular/platform-browser-dynamic": "2.2.1",
-    "@angular/router": "3.2.1",
+    "@angular/common": "~2.4.2",
+    "@angular/compiler": "~2.4.2",
+    "@angular/core": "~2.4.2",
+    "@angular/forms": "~2.4.2",
+    "@angular/http": "~2.4.2",
+    "@angular/platform-browser": "~2.4.2",
+    "@angular/platform-browser-dynamic": "~2.4.2",
+    "@angular/upgrade": "~2.4.2",
+    "@angular/router": "~3.4.0",
+
+    "reflect-metadata": "^0.1.8",
     "angular2-google-maps": "^0.17.0",
     "bootstrap": "^4.0.0-alpha.5",
     "core-js": "^2.4.1",
@@ -38,18 +41,20 @@
     "lodash": "^4.17.2",
     "moment": "^2.17.0",
     "ng2-translate": "^4.0.1",
-    "rxjs": "5.0.0-beta.12",
+    "rxjs": "5.0.1",
     "ts-helpers": "^1.1.1",
-    "zone.js": "^0.6.23"
+    "zone.js": "^0.7.4"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "2.2.1",
+    "concurrently": "^3.0.0",
+    "lite-server": "^2.2.2",
+    "@angular/compiler-cli": "~2.4.2",
     "@types/jasmine": "2.5.38",
     "@types/lodash": "^4.14.41",
     "@types/moment": "^2.13.0",
     "@types/node": "^6.0.42",
-    "angular-cli": "1.0.0-beta.21",
-    "codelyzer": "~1.0.0-beta.3",
+    "angular-cli": "^1.0.0-beta.24",
+    "codelyzer": "~2.0.0-beta.1",
     "jasmine-core": "2.5.2",
     "jasmine-spec-reporter": "2.5.0",
     "karma": "1.2.0",
@@ -57,9 +62,9 @@
     "karma-cli": "^1.0.1",
     "karma-jasmine": "^1.0.2",
     "karma-remap-istanbul": "^0.2.1",
-    "protractor": "4.0.9",
+    "protractor": "4.0.13",
     "ts-node": "1.2.1",
-    "tslint": "3.13.0",
+    "tslint": "~4.3.1",
     "typescript": "~2.0.3",
     "webdriver-manager": "10.2.5"
   }
