--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "@angular/platform-browser-dynamic": "2.2.1",
     "@angular/router": "3.2.1",
     "angular2-google-maps": "^0.17.0",
-    "bootstrap": "^4.0.0-alpha.5",
+    "bootstrap": "4.0.0-alpha.5",
     "core-js": "^2.4.1",
     "express": "^4.14.0",
     "font-awesome": "^4.7.0",
@@ -44,7 +44,7 @@
   },
   "devDependencies": {
     "@angular/compiler-cli": "2.2.1",
-    "@ngtools/webpack": "^1.1.6",
+    "@ngtools/webpack": "1.1.6",
     "@types/jasmine": "2.5.38",
     "@types/lodash": "^4.14.41",
     "@types/moment": "^2.13.0",
