--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "start": "node server.js",
     "start-dev": "ng serve",
     "start-prod": "ng serve --prod",
+    "extract-translations": "ng2-translate-extract --dir ./src --output ./used_i18n.json --format=json --clean",
     "build": "ng build --prod --env=prod",
     "build-aot": "ng build --prod --aot --env=prod",
     "lint": "tslint \"src/**/*.ts\"",
@@ -44,6 +45,7 @@
   },
   "devDependencies": {
     "@angular/compiler-cli": "2.2.1",
+    "@biesbjerg/ng2-translate-extract": "^0.6.0",
     "@ngtools/webpack": "1.1.6",
     "@types/jasmine": "2.5.38",
     "@types/lodash": "^4.14.41",
