--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "lodash": "^4.17.2",
     "moment": "^2.17.0",
     "ng2-translate": "^4.0.1",
+    "raven-js": "^3.10.0",
     "rxjs": "5.0.0-beta.12",
     "ts-helpers": "^1.1.1",
     "zone.js": "^0.6.23"
