--- a/package.json
+++ b/package.json
@@ -22,38 +22,38 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "2.2.1",
-    "@angular/compiler": "2.2.1",
-    "@angular/core": "2.2.1",
-    "@angular/forms": "2.2.1",
-    "@angular/http": "2.2.1",
-    "@angular/platform-browser": "2.2.1",
-    "@angular/platform-browser-dynamic": "2.2.1",
-    "@angular/router": "3.2.1",
+    "@angular/common": "2.3.1",
+    "@angular/compiler": "2.3.1",
+    "@angular/core": "2.3.1",
+    "@angular/forms": "2.3.1",
+    "@angular/http": "2.3.1",
+    "@angular/platform-browser": "2.3.1",
+    "@angular/platform-browser-dynamic": "2.3.1",
+    "@angular/router": "3.3.1",
     "angular2-google-maps": "^0.17.0",
     "bootstrap": "4.0.0-alpha.5",
     "core-js": "^2.4.1",
     "express": "^4.14.0",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
-    "lodash": "^4.17.2",
+    "lodash": "^4.17.4",
     "moment": "^2.17.0",
     "ng2-translate": "^4.0.1",
     "raven-js": "^3.10.0",
-    "rxjs": "5.0.0-beta.12",
+    "rxjs": "5.0.0-rc.4",
     "ts-helpers": "^1.1.1",
     "zone.js": "^0.6.23"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "2.2.1",
+    "@angular/compiler-cli": "2.3.1",
     "@biesbjerg/ng2-translate-extract": "^0.6.0",
-    "@ngtools/webpack": "1.1.6",
     "@types/jasmine": "2.5.38",
-    "@types/lodash": "^4.14.41",
+    "@types/lodash": "4.14.50",
     "@types/moment": "^2.13.0",
     "@types/node": "^6.0.42",
-    "angular-cli": "1.0.0-beta.21",
+    "angular-cli": "1.0.0-beta.26",
     "codelyzer": "~1.0.0-beta.3",
+    "extract-text-webpack-plugin": "2.0.0-beta.rc.2",
     "jasmine-core": "2.5.2",
     "jasmine-spec-reporter": "2.5.0",
     "karma": "1.2.0",
@@ -65,6 +65,7 @@
     "ts-node": "1.2.1",
     "tslint": "3.13.0",
     "typescript": "~2.0.3",
-    "webdriver-manager": "10.2.5"
+    "webdriver-manager": "10.2.5",
+    "webpack": "2.2.0"
   }
 }
