--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "test": "ng test",
     "pree2e": "webdriver-manager update",
     "e2e": "protractor",
-    "postinstall": "ng build -prod"
+    "postinstall": "ng build --aot -prod"
   },
   "private": true,
   "dependencies": {
