Set cacheDirectory & update app.json

--- a/app.json
+++ b/app.json
@@ -4,7 +4,8 @@
   "scripts": {},
   "env": {
     "NPM_CONFIG_PRODUCTION": {
-      "required": true
+      "required": true,
+      "value": false
     }
   },
   "formation": {},
