--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "raven-js": "^3.10.0",
     "rxjs": "5.0.0-rc.4",
     "ts-helpers": "^1.1.1",
+    "webpack": "2.2.0",
     "zone.js": "^0.6.23"
   },
   "devDependencies": {
@@ -65,8 +66,7 @@
     "ts-node": "1.2.1",
     "tslint": "3.13.0",
     "typescript": "~2.0.3",
-    "webdriver-manager": "10.2.5",
-    "webpack": "2.2.0"
+    "webdriver-manager": "10.2.5"
   },
   "cacheDirectories": ["node_modules"]
 }
