Add postcss-loader to package.json deps

--- a/package.json
+++ b/package.json
@@ -30,24 +30,25 @@
     "@angular/platform-browser": "2.3.1",
     "@angular/platform-browser-dynamic": "2.3.1",
     "@angular/router": "3.3.1",
+    "@types/lodash": "4.14.50",
     "angular-cli": "1.0.0-beta.26",
     "angular2-google-maps": "^0.17.0",
     "bootstrap": "4.0.0-alpha.5",
     "core-js": "^2.4.1",
     "express": "^4.14.0",
+    "extract-text-webpack-plugin": "2.0.0-beta.rc.2",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "lodash": "^4.17.4",
     "moment": "^2.17.0",
     "ng2-translate": "^4.0.1",
+    "postcss-loader": "^1.2.2",
     "raven-js": "^3.10.0",
     "rxjs": "5.0.0-rc.4",
-    "extract-text-webpack-plugin": "2.0.0-beta.rc.2",
+    "ts-helpers": "^1.1.1",
     "ts-node": "1.2.1",
     "typescript": "~2.0.3",
-    "ts-helpers": "^1.1.1",
     "webpack": "2.2.0",
-    "@types/lodash": "4.14.50",
     "zone.js": "^0.6.23"
   },
   "devDependencies": {
