--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
   "scripts": {
     "start": "node server.js",
     "start-dev": "ng serve",
-    "start-prod": "ng serve --env=prod",
+    "start-prod": "ng serve --env=production",
+    "start-production": "ng serve --env=production",
     "extract-translations": "ng2-translate-extract --dir ./src --output ./used_i18n.json --format=json --clean",
-    "build": "ng build --env=$NODE_ENV",
-    "build-aot": "ng build --env=$NODE_ENV",
+    "build": "ng build --env=${NODE_ENV-production}",
+    "build-aot": "ng build --env=${NODE_ENV-production}",
     "lint": "tslint \"src/**/*.ts\"",
     "test": "ng test",
     "pree2e": "webdriver-manager update",
