--- a/app.json
+++ b/app.json
@@ -6,6 +6,10 @@
     "NPM_CONFIG_PRODUCTION": {
       "required": true,
       "value": "false"
+    },
+    "NODE_MODULES_CACHE": {
+      "required": true,
+      "value": "false"
     }
   },
   "formation": {},
