--- a/app.json
+++ b/app.json
@@ -3,6 +3,10 @@
   "description": "Just Match - Web app",
   "scripts": {},
   "env": {
+    "NODE_ENV": {
+      "required": true,
+      "value": "staging"
+    },
     "NPM_CONFIG_PRODUCTION": {
       "required": true,
       "value": "false"
