--- a/package.json
+++ b/package.json
@@ -23,16 +23,16 @@
   },
   "private": false,
   "dependencies": {
-    "@angular/common": "2.4.0",
-    "@angular/compiler": "2.4.0",
-    "@angular/core": "2.4.0",
-    "@angular/forms": "2.4.0",
-    "@angular/http": "2.4.0",
-    "@angular/platform-browser": "2.4.0",
-    "@angular/platform-browser-dynamic": "2.4.0",
-    "@angular/router": "3.3.1",
+    "@angular/common": "2.4.7",
+    "@angular/compiler": "2.4.7",
+    "@angular/core": "2.4.7",
+    "@angular/forms": "2.4.7",
+    "@angular/http": "2.4.7",
+    "@angular/platform-browser": "2.4.7",
+    "@angular/platform-browser-dynamic": "2.4.7",
+    "@angular/router": "3.4.7",
     "@types/lodash": "4.14.50",
-    "angular-cli": "1.0.0-beta.26",
+    "angular-cli": "1.0.0-beta.32.3",
     "angular2-google-maps": "^0.17.0",
     "bootstrap": "4.0.0-alpha.5",
     "core-js": "^2.4.1",
@@ -43,19 +43,19 @@
     "jquery": "^3.1.1",
     "lodash": "^4.17.4",
     "moment": "^2.17.0",
-    "ng-semantic": "^1.1.13",
+    "ng-semantic": "file:../ngSemantic",
     "ng2-translate": "^5.0.0",
     "postcss-loader": "^1.2.2",
     "raven-js": "^3.10.0",
     "rxjs": "5.0.0-rc.4",
     "ts-helpers": "^1.1.1",
     "ts-node": "1.2.1",
-    "typescript": "~2.0.3",
+    "typescript": "~2.2.0",
     "webpack": "2.2.0",
     "zone.js": "^0.6.23"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "2.4.0",
+    "@angular/compiler-cli": "2.4.7",
     "@biesbjerg/ng2-translate-extract": "^0.6.0",
     "@types/jasmine": "2.5.38",
     "@types/moment": "^2.13.0",
