--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "postcss-loader": "^1.2.2",
     "raven-js": "^3.10.0",
     "rxjs": "5.0.0-rc.4",
+    "semantic-ui": "^2.2.9",
     "ts-helpers": "^1.1.1",
     "ts-node": "1.2.1",
     "typescript": "~2.2.0",
