--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "bootstrap": "4.0.0-alpha.5",
     "core-js": "^2.4.1",
     "express": "^4.14.0",
-    "extract-text-webpack-plugin": "2.0.0-beta.rc.2",
+    "extract-text-webpack-plugin": "2.0.0",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "jquery": "^3.1.1",
