--- a/package.json
+++ b/package.json
@@ -51,24 +51,24 @@
     "ts-helpers": "^1.1.1",
     "ts-node": "~2.0.0",
     "typescript": "~2.2.0",
-    "webpack": "2.2.0",
+    "webpack": "^2.2.1",
     "zone.js": "^0.7.6"
   },
   "devDependencies": {
     "@angular/cli": "^1.0.0-rc.0",
     "@angular/compiler-cli": "^2.4.8",
     "@biesbjerg/ng2-translate-extract": "^0.6.0",
-    "@types/jasmine": "2.5.38",
+    "@types/jasmine": "^2.5.43",
     "@types/moment": "^2.13.0",
-    "@types/node": "~6.0.60",
+    "@types/node": "^7.0.5",
     "codelyzer": "~2.0.0",
     "jasmine-core": "~2.5.2",
     "karma": "~1.4.1",
     "karma-chrome-launcher": "^2.0.0",
     "karma-cli": "^1.0.1",
+    "karma-coverage-istanbul-reporter": "^0.2.0",
     "karma-jasmine": "^1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "karma-coverage-istanbul-reporter": "^0.2.0",
     "protractor": "~5.1.0",
     "tslint": "~4.4.2",
     "webdriver-manager": "10.2.5"
