--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "postcss-loader": "^1.2.2",
     "raven-js": "^3.10.0",
     "rxjs": "^5.2.0",
-    "semantic-ui": "^2.2.9",
+    "semantic-ui.css": "^2.2.9",
     "ts-helpers": "^1.1.1",
     "ts-node": "~2.0.0",
     "typescript": "~2.2.0",
