--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
     "@types/jasmine": "^2.5.43",
     "@types/moment": "^2.13.0",
     "@types/node": "^7.0.5",
-    "codelyzer": "~2.0.0",
+    "codelyzer": "^2.0.1",
     "jasmine-core": "~2.5.2",
     "karma": "~1.4.1",
     "karma-chrome-launcher": "^2.0.0",
@@ -70,7 +70,7 @@
     "karma-jasmine": "^1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.1.0",
-    "tslint": "~4.4.2",
+    "tslint": "^4.3.0",
     "webdriver-manager": "10.2.5"
   }
 }
