--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "extract-translations": "ng2-translate-extract --dir ./src --output ./used_i18n.json --format=json --clean",
     "build": "ng build -${NODE_ENV-prod}",
     "build-aot": "ng build -${NODE_ENV-prod} --aot",
-    "lint": "tslint \"src/**/*.ts\"",
+    "lint": "tslint \"src/app/views/**/*.ts\"",
     "test": "ng test",
     "pree2e": "webdriver-manager update",
     "e2e": "protractor",
