--- a/package.json
+++ b/package.json
@@ -23,13 +23,13 @@
   },
   "private": false,
   "dependencies": {
-    "@angular/common": "^2.4.8",
-    "@angular/compiler": "^2.4.8",
-    "@angular/core": "^2.4.8",
-    "@angular/forms": "^2.4.8",
-    "@angular/http": "^2.4.8",
-    "@angular/platform-browser": "^2.4.8",
-    "@angular/platform-browser-dynamic": "^2.4.8",
+    "@angular/common": "^2.4.9",
+    "@angular/compiler": "^2.4.9",
+    "@angular/core": "^2.4.9",
+    "@angular/forms": "^2.4.9",
+    "@angular/http": "^2.4.9",
+    "@angular/platform-browser": "^2.4.9",
+    "@angular/platform-browser-dynamic": "^2.4.9",
     "@angular/router": "3.3.0",
     "@types/lodash": "4.14.50",
     "angular2-google-maps": "^0.17.0",
@@ -56,7 +56,7 @@
   },
   "devDependencies": {
     "@angular/cli": "^1.0.0-rc.0",
-    "@angular/compiler-cli": "^2.4.8",
+    "@angular/compiler-cli": "^2.4.9",
     "@biesbjerg/ng2-translate-extract": "^0.6.0",
     "@types/jasmine": "^2.5.43",
     "@types/moment": "^2.13.0",
@@ -71,6 +71,7 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.1.0",
     "tslint": "^4.3.0",
+    "tslint-misc-rules": "^2.9.0",
     "webdriver-manager": "10.2.5"
   }
 }
