--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/lodash": "4.14.50",
     "angular2-google-maps": "^0.17.0",
     "bootstrap": "4.0.0-alpha.5",
+    "compression": "^1.6.2",
     "core-js": "^2.4.1",
     "express": "^4.14.0",
     "extract-text-webpack-plugin": "2.0.0",
