--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "test": "ng test",
     "pree2e": "webdriver-manager update",
     "e2e": "protractor",
-    "postinstall": "ng build -${NODE_ENV-prod} --aot"
+    "postinstall": "ng build -prod --aot --env=${NODE_ENV-prod}"
   },
   "private": false,
   "dependencies": {
