--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "test": "ng test",
     "pree2e": "webdriver-manager update",
     "e2e": "protractor",
+    "preinstall": "yarn global add angular-cli",
     "postinstall": "ng build -prod --aot --env=${ENV_CONFIG-prod}"
   },
   "private": false,
