--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "test": "ng test",
     "pree2e": "webdriver-manager update",
     "e2e": "protractor",
-    "heroku-prebuild": "npm install -g @angular/cli",
+    "heroku-prebuild": "yarn global add @angular/cli",
     "heroku-postbuild": "ng build -prod --aot --env=${ENV_CONFIG-prod}"
   },
   "private": false,
