--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "@angular/http": "^2.4.9",
     "@angular/platform-browser": "^2.4.9",
     "@angular/platform-browser-dynamic": "^2.4.9",
-    "@angular/router": "3.3.0",
+    "@angular/compiler-cli": "^2.4.9",
+    "@angular/router": "^3.4.9",
     "@types/lodash": "4.14.50",
     "angular2-google-maps": "^0.17.0",
     "bootstrap": "4.0.0-alpha.5",
@@ -58,7 +59,6 @@
   },
   "devDependencies": {
     "@angular/cli": "^1.0.0-rc.0",
-    "@angular/compiler-cli": "^2.4.9",
     "@biesbjerg/ng2-translate-extract": "^0.6.0",
     "@types/jasmine": "^2.5.43",
     "@types/moment": "^2.13.0",
