--- a/package.json
+++ b/package.json
@@ -24,16 +24,16 @@
   },
   "private": false,
   "dependencies": {
+    "@angular/cli": "^1.0.0-rc.1",
     "@angular/common": "^2.4.9",
     "@angular/compiler": "^2.4.9",
+    "@angular/compiler-cli": "^2.4.9",
     "@angular/core": "^2.4.9",
     "@angular/forms": "^2.4.9",
     "@angular/http": "^2.4.9",
     "@angular/platform-browser": "^2.4.9",
     "@angular/platform-browser-dynamic": "^2.4.9",
     "@angular/router": "^3.4.9",
-    "@angular/cli": "^1.0.0-rc.0",
-    "@angular/compiler-cli": "^2.4.9",
     "@types/lodash": "4.14.50",
     "angular2-google-maps": "^0.17.0",
     "bootstrap": "4.0.0-alpha.5",
@@ -53,7 +53,7 @@
     "rxjs": "^5.2.0",
     "semantic-ui-css": "^2.2.9",
     "ts-helpers": "^1.1.1",
-    "ts-node": "~2.0.0",
+    "ts-node": "^2.1.0",
     "typescript": "~2.2.0",
     "webpack": "^2.2.1",
     "zone.js": "^0.7.6"
