--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "npm": "3.10.8"
   },
   "scripts": {
-    "start": "ng serve",
+    "start": "node server.js",
     "start-dev": "ng serve",
     "start-development": "ng serve",
     "start-prod": "ng serve -prod",
