--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "jquery": "^3.1.1",
     "lodash": "^4.17.4",
     "moment": "^2.17.0",
-    "ng-semantic-ja": "https://github.com/justarrived/ngSemantic/tarball/ja",
+    "ng-semantic-ja": "https://github.com/justarrived/ngSemantic/tarball/ja#d2ec79cd217c096c4b7bbc637f4c4eed68ddbf6e",
     "ng2-translate": "^5.0.0",
     "postcss-loader": "^1.2.2",
     "raven-js": "^3.10.0",
