--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "@angular/platform-browser": "^2.4.9",
     "@angular/platform-browser-dynamic": "^2.4.9",
     "@angular/router": "^3.4.9",
-    "@types/lodash": "4.14.50",
+    "@types/lodash": "^4.14.61",
     "angular2-google-maps": "^0.17.0",
     "bootstrap": "4.0.0-alpha.5",
     "compression": "^1.6.2",
@@ -46,15 +46,16 @@
     "jquery": "^3.1.1",
     "lodash": "^4.17.4",
     "moment": "^2.17.0",
-    "ng-semantic-ja": "https://github.com/justarrived/ngSemantic/tarball/ja#94a7c0aa531f16c1f59d7c60439357270596293f",
+    "ng-semantic-ja": "https://github.com/justarrived/ngSemantic/tarball/ja#607a249037d1f2cfc12b0d9d53a40aa17608e432",
     "ng2-translate": "^5.0.0",
+    "node-sass": "^4.5.2",
     "postcss-loader": "^1.2.2",
     "raven-js": "^3.10.0",
     "rxjs": "^5.2.0",
     "semantic-ui-css": "^2.2.9",
     "ts-helpers": "^1.1.1",
     "ts-node": "^2.1.0",
-    "typescript": "^2.2.0",
+    "typescript": "^2.2.2",
     "webpack": "^2.2.1",
     "zone.js": "^0.7.6"
   },
