--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "^4.0.1",
     "@angular/cli": "^1.0.0-rc.2",
     "@angular/common": "^4.0.1",
     "@angular/compiler": "^4.0.1",
@@ -39,12 +40,14 @@
     "@types/lodash": "^4.14.61",
     "angular2-google-maps": "^0.17.0",
     "bootstrap": "4.0.0-alpha.5",
+    "classlist.js": "^1.1.20150312",
     "compression": "^1.6.2",
     "core-js": "^2.4.1",
     "express": "^4.14.0",
     "extract-text-webpack-plugin": "2.1.0",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
+    "intl": "^1.2.5",
     "jquery": "^3.1.1",
     "lodash": "^4.17.4",
     "moment": "^2.17.0",
@@ -56,6 +59,7 @@
     "ts-helpers": "^1.1.1",
     "ts-node": "^3.0.2",
     "typescript": "^2.2.2",
+    "web-animations-js": "^2.2.2",
     "webpack": "^2.2.1",
     "zone.js": "^0.8.5"
   },
