--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "private": true,
   "dependencies": {
+    "@agm/core": "^1.0.0-beta.0",
     "@angular/animations": "^4.0.1",
     "@angular/cli": "^1.0.0-rc.2",
     "@angular/common": "^4.0.1",
@@ -38,7 +39,6 @@
     "@ngx-translate/core": "^6.0.1",
     "@ngx-translate/http-loader": "0.0.3",
     "@types/lodash": "^4.14.61",
-    "angular2-google-maps": "^0.17.0",
     "bootstrap": "4.0.0-alpha.5",
     "classlist.js": "^1.1.20150312",
     "compression": "^1.6.2",
