--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "build": "ng build -${NODE_ENV-prod}",
     "build-aot": "ng build -${NODE_ENV-prod} --aot",
     "lint": "ng lint",
-    "test": "ng test",
+    "test": "ng test --single-run",
     "pree2e": "webdriver-manager update",
     "e2e": "ng e2e",
     "heroku-prebuild": "yarn global add @angular/cli",
