--- a/circle.yml
+++ b/circle.yml
@@ -5,6 +5,11 @@ machine:
     version: 6.10.2
 
 dependencies:
+  pre:
+    - curl -L -o google-chrome.deb https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
+    - sudo dpkg -i google-chrome.deb
+    - sudo sed -i 's|HERE/chrome\"|HERE/chrome\" --disable-setuid-sandbox|g' /opt/google/chrome/google-chrome
+    - rm google-chrome.deb
   override:
     - yarn
   cache_directories:
