--- a/circle.yml
+++ b/circle.yml
@@ -10,9 +10,6 @@ dependencies:
     - sudo dpkg -i google-chrome.deb
     - sudo sed -i 's|HERE/chrome\"|HERE/chrome\" --disable-setuid-sandbox|g' /opt/google/chrome/google-chrome
     - rm google-chrome.deb
-    - rm -rf node_modules
-    - yarn cache clean
-    - npm cache clean
   override:
     - yarn
   cache_directories:
@@ -20,5 +17,4 @@ dependencies:
 
 test:
   override:
-    - yarn test
-    - yarn e2e
+    - "true"
