--- a/package.json
+++ b/package.json
@@ -25,61 +25,61 @@
   "private": true,
   "dependencies": {
     "@agm/core": "^1.0.0-beta.0",
-    "@angular/animations": "^4.0.1",
-    "@angular/cli": "^1.0.0-rc.2",
-    "@angular/common": "^4.0.1",
-    "@angular/compiler": "^4.0.1",
-    "@angular/compiler-cli": "^4.0.1",
-    "@angular/core": "^4.0.1",
-    "@angular/forms": "^4.0.1",
-    "@angular/http": "^4.0.1",
-    "@angular/platform-browser": "^4.0.1",
-    "@angular/platform-browser-dynamic": "^4.0.1",
-    "@angular/router": "^4.0.1",
+    "@angular/animations": "^4.0.2",
+    "@angular/cli": "^1.0.0",
+    "@angular/common": "^4.0.2",
+    "@angular/compiler": "^4.0.2",
+    "@angular/compiler-cli": "^4.0.2",
+    "@angular/core": "^4.0.2",
+    "@angular/forms": "^4.0.2",
+    "@angular/http": "^4.0.2",
+    "@angular/platform-browser": "^4.0.2",
+    "@angular/platform-browser-dynamic": "^4.0.2",
+    "@angular/router": "^4.0.2",
     "@ngx-translate/core": "^6.0.1",
     "@ngx-translate/http-loader": "0.0.3",
-    "@types/lodash": "^4.14.61",
+    "@types/lodash": "^4.14.62",
     "bootstrap": "4.0.0-alpha.5",
     "classlist.js": "^1.1.20150312",
     "compression": "^1.6.2",
     "core-js": "^2.4.1",
-    "express": "^4.14.0",
+    "express": "^4.15.2",
     "extract-text-webpack-plugin": "2.1.0",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "intl": "^1.2.5",
-    "jquery": "^3.1.1",
+    "jquery": "^3.2.1",
     "lodash": "^4.17.4",
-    "moment": "^2.17.0",
+    "moment": "^2.18.1",
     "node-sass": "^4.5.2",
-    "postcss-loader": "^1.2.2",
-    "raven-js": "^3.10.0",
-    "rxjs": "^5.2.0",
-    "semantic-ui-css": "^2.2.9",
-    "ts-helpers": "^1.1.1",
+    "postcss-loader": "^1.3.3",
+    "raven-js": "^3.14.2",
+    "rxjs": "^5.3.0",
+    "semantic-ui-css": "^2.2.10",
+    "ts-helpers": "^1.1.2",
     "ts-node": "^3.0.2",
     "typescript": "^2.2.2",
-    "web-animations-js": "^2.2.2",
-    "webpack": "^2.2.1",
+    "web-animations-js": "^2.2.4",
+    "webpack": "^2.4.1",
     "zone.js": "^0.8.5"
   },
   "devDependencies": {
-    "@biesbjerg/ngx-translate-extract": "^2.2.1",
-    "@types/jasmine": "^2.5.43",
+    "@biesbjerg/ngx-translate-extract": "^2.2.2",
+    "@types/jasmine": "^2.5.47",
     "@types/moment": "^2.13.0",
-    "@types/node": "^7.0.5",
-    "codelyzer": "^2.0.1",
+    "@types/node": "^7.0.13",
+    "codelyzer": "^2.1.1",
     "jasmine-core": "^2.5.2",
-    "jasmine-spec-reporter": "^3.2.0",
-    "karma": "^1.4.1",
+    "jasmine-spec-reporter": "^4.0.0",
+    "karma": "^1.6.0",
     "karma-chrome-launcher": "^2.0.0",
     "karma-cli": "^1.0.1",
-    "karma-coverage-istanbul-reporter": "^1.0.0",
+    "karma-coverage-istanbul-reporter": "^1.2.0",
     "karma-jasmine": "^1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "^5.1.1",
-    "tslint": "^4.5.1",
-    "tslint-misc-rules": "^2.9.0",
+    "tslint": "4.5.1^",
+    "tslint-misc-rules": "^3.0.0",
     "webdriver-manager": "12.0.4"
   }
 }
