--- a/package.json
+++ b/package.json
@@ -78,7 +78,7 @@
     "karma-jasmine": "^1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "^5.1.1",
-    "tslint": "4.5.1^",
+    "tslint": "^4.5.1",
     "tslint-misc-rules": "^3.0.0",
     "webdriver-manager": "12.0.4"
   }
