--- a/package.json
+++ b/package.json
@@ -7,14 +7,17 @@
     "npm": "3.10.8"
   },
   "scripts": {
-    "start": "node server.js",
+    "ee": "gulp before:ngc",
+    "ss": "gulp after:ngc",
+    "prestart": "ng build --prod && gulp before:ngc && ngc && gulp after:ngc && webpack",
+    "start": "node dist/server.js",
     "start-dev": "ng serve",
     "start-development": "ng serve",
     "start-prod": "ng serve -prod",
     "start-production": "ng serve -prod",
     "extract-translations": "ngx-translate-extract --dir ./src --output ./used_i18n.json --format=json --clean",
-    "build": "ng build -${NODE_ENV-prod}",
-    "build-aot": "ng build -${NODE_ENV-prod} --aot",
+    "build": "ng build -${NODE_ENV-prod} && ngc",
+    "build-aot": "ng build -${NODE_ENV-prod} --aot && ngc",
     "lint": "ng lint",
     "test": "ng test --single-run",
     "pree2e": "webdriver-manager update",
@@ -26,15 +29,14 @@
   "dependencies": {
     "@agm/core": "^1.0.0-beta.0",
     "@angular/animations": "^4.0.2",
-    "@angular/cli": "^1.0.0",
     "@angular/common": "^4.0.2",
     "@angular/compiler": "^4.0.2",
-    "@angular/compiler-cli": "^4.0.2",
     "@angular/core": "^4.0.2",
     "@angular/forms": "^4.0.2",
     "@angular/http": "^4.0.2",
     "@angular/platform-browser": "^4.0.2",
     "@angular/platform-browser-dynamic": "^4.0.2",
+    "@angular/platform-server": "^4.0.2",
     "@angular/router": "^4.0.2",
     "@ngx-translate/core": "^6.0.1",
     "@ngx-translate/http-loader": "0.0.3",
@@ -52,6 +54,7 @@
     "moment": "^2.18.1",
     "node-sass": "^4.5.2",
     "postcss-loader": "^1.3.3",
+    "preboot": "^4.5.2",
     "raven-js": "^3.14.2",
     "rxjs": "^5.3.0",
     "semantic-ui-css": "^2.2.10",
@@ -63,11 +66,18 @@
     "zone.js": "0.8.7"
   },
   "devDependencies": {
+    "@angular/cli": "^1.0.0",
+    "@angular/compiler-cli": "^4.0.2",
     "@biesbjerg/ngx-translate-extract": "^2.2.2",
     "@types/jasmine": "^2.5.47",
     "@types/moment": "^2.13.0",
     "@types/node": "^7.0.13",
     "codelyzer": "^2.1.1",
+    "gulp": "^3.9.1",
+    "gulp-clean": "^0.3.2",
+    "gulp-rename": "^1.2.2",
+    "gulp-sass": "^3.1.0",
+    "gulp-sequence": "^0.4.6",
     "jasmine-core": "^2.5.2",
     "jasmine-spec-reporter": "^4.0.0",
     "karma": "^1.6.0",
@@ -77,8 +87,10 @@
     "karma-jasmine": "^1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "^5.1.1",
+    "ts-loader": "^2.0.3",
     "tslint": "^4.5.1",
     "tslint-misc-rules": "^3.0.0",
-    "webdriver-manager": "12.0.4"
+    "webdriver-manager": "12.0.4",
+    "webpack-node-externals": "^1.5.4"
   }
 }
