--- a/src/tsconfig.app.json
+++ b/src/tsconfig.app.json
@@ -1,16 +1,7 @@
 {
+  "extends": "../tsconfig.json",
   "compilerOptions": {
-    "sourceMap": true,
-    "declaration": false,
-    "moduleResolution": "node",
-    "emitDecoratorMetadata": true,
-    "experimentalDecorators": true,
-    "lib": [
-      "es6",
-      "dom"
-    ],
     "outDir": "../out-tsc/app",
-    "target": "es5",
     "module": "es2015",
     "baseUrl": "",
     "types": []
@@ -18,6 +9,7 @@
   "exclude": [
     "node_modules",
     "script",
+    "server.ts",
     "test.ts",
     "**/*.spec.ts"
   ]
