--- a/src/tsconfig.spec.json
+++ b/src/tsconfig.spec.json
@@ -1,20 +1,20 @@
 {
-  "_comment": "Update to angular-cli tsconfig.spec.json when this fix is released: https://github.com/angular/angular-cli/issues/5082",
   "extends": "../tsconfig.json",
   "compilerOptions": {
     "outDir": "../out-tsc/spec",
     "module": "commonjs",
     "target": "es5",
+    "baseUrl": "",
     "types": [
       "jasmine",
       "node"
-    ],
-    "typeRoots": [
-      "../node_modules/@types"
     ]
   },
-  "exclude": [
-    "node_modules",
-    "script"
+  "files": [
+    "test.ts"
+  ],
+  "include": [
+    "**/*.spec.ts",
+    "**/*.d.ts"
   ]
 }
