--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@angular/platform-browser-dynamic": "^4.0.2",
     "@angular/platform-server": "^4.0.2",
     "@angular/router": "^4.0.2",
+    "@nguniversal/express-engine": "^1.0.0-beta.0",
     "@ngx-cache/core": "^0.4.0-beta.1",
     "@ngx-translate/core": "^6.0.1",
     "@ngx-translate/http-loader": "0.0.3",
