--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "ee": "gulp before:ngc",
     "ss": "gulp after:ngc",
-    "prestart": "ng build --prod && gulp before:ngc && ngc && gulp after:ngc && webpack",
+    "prestart": "ng build --prod --aot && gulp before:ngc && ngc && gulp after:ngc && webpack",
     "start": "node dist/server.js",
     "start-dev": "ng serve",
     "start-development": "ng serve",
