--- a/package.json
+++ b/package.json
@@ -7,23 +7,16 @@
     "npm": "3.10.8"
   },
   "scripts": {
-    "ee": "gulp before:ngc",
-    "ss": "gulp after:ngc",
-    "prestart": "ng build --prod --aot && gulp before:ngc && ngc && gulp after:ngc && webpack",
-    "start": "node dist/server.js",
-    "start-dev": "ng serve",
-    "start-development": "ng serve",
-    "start-prod": "ng serve -prod",
-    "start-production": "ng serve -prod",
-    "extract-translations": "ngx-translate-extract --dir ./src --output ./used_i18n.json --format=json --clean",
-    "build": "ng build -${NODE_ENV-prod} && ngc",
-    "build-aot": "ng build -${NODE_ENV-prod} --aot && ngc",
-    "lint": "ng lint",
-    "test": "ng test --single-run",
+    "build": "ng build -${NODE_ENV-prod} --aot && gulp before:ngc && ngc && gulp after:ngc && webpack",
     "pree2e": "webdriver-manager update",
     "e2e": "ng e2e",
     "heroku-prebuild": "yarn global add @angular/cli",
-    "heroku-postbuild": "ng build -prod --aot --env=${ENV_CONFIG-prod}"
+    "heroku-postbuild": "ng build -prod --aot --env=${ENV_CONFIG-prod} && gulp before:ngc && ngc && gulp after:ngc && webpack",
+    "lint": "ng lint",
+    "start-dev": "ng serve",
+    "prestart": "yarn run build",
+    "start": "node dist/server.js",
+    "test": "ng test --single-run"
   },
   "private": true,
   "dependencies": {
