--- a/package.json
+++ b/package.json
@@ -31,12 +31,10 @@
     "@angular/platform-browser-dynamic": "^4.0.2",
     "@angular/platform-server": "^4.0.2",
     "@angular/router": "^4.0.2",
-    "@nguniversal/express-engine": "^1.0.0-beta.1",
     "@ngx-cache/core": "^0.4.0-beta.1",
     "@ngx-translate/core": "^6.0.1",
     "@ngx-translate/http-loader": "0.0.3",
     "@ngx-universal/translate-loader": "^0.4.0-beta.1",
-    "@types/lodash": "^4.14.62",
     "classlist.js": "^1.1.20150312",
     "compression": "^1.6.2",
     "cookie-parser": "^1.4.3",
@@ -57,16 +55,16 @@
     "semantic-ui-css": "^2.2.10",
     "ts-helpers": "^1.1.2",
     "ts-node": "^3.0.2",
-    "typescript": "^2.2.2",
     "web-animations-js": "^2.2.4",
-    "webpack": "^2.4.1",
     "zone.js": "0.8.7"
   },
   "devDependencies": {
     "@angular/cli": "^1.0.0",
     "@angular/compiler-cli": "^4.0.2",
     "@biesbjerg/ngx-translate-extract": "^2.2.2",
+    "@types/express": "^4.0.35",
     "@types/jasmine": "^2.5.47",
+    "@types/lodash": "^4.14.62",
     "@types/moment": "^2.13.0",
     "@types/node": "^7.0.13",
     "codelyzer": "^2.1.1",
@@ -87,7 +85,9 @@
     "ts-loader": "^2.0.3",
     "tslint": "^4.5.1",
     "tslint-misc-rules": "^3.0.0",
+    "typescript": "^2.2.2",
     "webdriver-manager": "12.0.4",
+    "webpack": "^2.4.1",
     "webpack-node-externals": "^1.5.4"
   }
 }
