--- a/package.json
+++ b/package.json
@@ -7,14 +7,15 @@
     "npm": "3.10.8"
   },
   "scripts": {
-    "build": "ng build -prod --aot && gulp before:ngc && ngc && gulp after:ngc && webpack",
-    "pree2e": "webdriver-manager update",
+    "build-dev": "ng build -prod --aot --env=dev && gulp before:ngc && ngc && gulp after:ngc && webpack --progress",
+    "build-staging": "ng build -prod --aot --env=staging && gulp before:ngc && ngc && gulp after:ngc && webpack --progress",
+    "build": "ng build -prod --aot --env=prod && gulp before:ngc && ngc && gulp after:ngc && webpack --progress",
     "e2e": "ng e2e",
+    "heroku-postbuild": "ng build -prod --env=${ENV_CONFIG-prod} && gulp before:ngc && ngc && gulp after:ngc && webpack --progress",
     "heroku-prebuild": "yarn global add @angular/cli",
-    "heroku-postbuild": "ng build -prod --env=${ENV_CONFIG-prod} && gulp before:ngc && ngc && gulp after:ngc && webpack",
     "lint": "ng lint",
+    "pree2e": "webdriver-manager update",
     "start-dev": "ng serve",
-    "prestart": "yarn run build",
     "start": "node dist/server.js",
     "test": "ng test --single-run"
   },
