--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@ngx-translate/http-loader": "0.1.0",
     "@ngx-universal/translate-loader": "0.4.0-beta.1",
     "@types/express": "4.0.36",
+    "@types/googlemaps": "3.26.20",
     "@types/jasmine": "2.5.53",
     "@types/lodash": "4.14.67",
     "@types/moment": "2.13.0",
