Works for serve but prod build fails

--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
   },
   "scripts": {
     "tt": "gulp after:ngc",
-    "build-dev": "ng build -prod --aot --env=dev && gulp before:ngc && ngc && gulp after:ngc && webpack --progress",
+    "build-dev": "node --max_old_space_size=8192 node_modules/@angular/cli/bin/ng build -prod --aot --env=dev && gulp before:ngc && ngc && gulp after:ngc && webpack --progress",
     "e2e": "ng e2e",
-    "heroku-postbuild": "ng build -prod --aot --env=${ENV_CONFIG} && gulp before:ngc && ngc && gulp after:ngc && webpack --progress",
+    "heroku-postbuild": "node --max_old_space_size=8192 node_modules/@angular/cli/bin/ng build -prod --aot --env=${ENV_CONFIG} && gulp before:ngc && ngc && gulp after:ngc && webpack --progress",
     "lint": "ng lint",
     "pree2e": "webdriver-manager update",
     "start-dev": "ng serve",
@@ -19,15 +19,15 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "4.1.3",
-    "@angular/common": "4.1.3",
-    "@angular/compiler-cli": "4.1.3",
-    "@angular/core": "4.1.3",
-    "@angular/forms": "4.1.3",
-    "@angular/http": "4.1.3",
-    "@angular/platform-browser": "4.1.3",
-    "@angular/platform-server": "4.1.3",
-    "@angular/router": "4.1.3",
+    "@angular/animations": "5.0.1",
+    "@angular/common": "5.0.1",
+    "@angular/compiler-cli": "5.0.1",
+    "@angular/core": "5.0.1",
+    "@angular/forms": "5.0.1",
+    "@angular/http": "5.0.1",
+    "@angular/platform-browser": "5.0.1",
+    "@angular/platform-server": "5.0.1",
+    "@angular/router": "5.0.1",
     "compression": "1.7.1",
     "cookie-parser": "1.4.3",
     "core-js": "2.5.1",
@@ -38,14 +38,14 @@
   },
   "devDependencies": {
     "@agm/core": "1.0.0-beta.2",
-    "@angular/cli": "1.2.6",
-    "@angular/compiler": "4.1.3",
-    "@angular/platform-browser-dynamic": "4.1.3",
-    "@biesbjerg/ngx-translate-extract": "2.3.2",
+    "@angular/cli": "1.5.0",
+    "@angular/compiler": "5.0.1",
+    "@angular/platform-browser-dynamic": "5.0.1",
+    "@biesbjerg/ngx-translate-extract": "2.3.4",
     "@ngx-cache/core": "4.0.1",
     "@ngx-translate/core": "8.0.0",
-    "@ngx-translate/http-loader": "0.1.0",
-    "@ngx-universal/translate-loader": "0.4.0-beta.1",
+    "@ngx-translate/http-loader": "2.0.0",
+    "@ngx-universal/translate-loader": "4.0.1",
     "@types/express": "4.0.39",
     "@types/googlemaps": "3.29.2",
     "@types/jasmine": "2.6.3",
