Update package.json scripts

--- a/package.json
+++ b/package.json
@@ -7,15 +7,18 @@
     "npm": "3.10.8"
   },
   "scripts": {
-    "tt": "gulp after:ngc",
-    "build-dev": "node --max_old_space_size=8192 node_modules/@angular/cli/bin/ng build -prod --aot --env=dev && gulp before:ngc && ngc && gulp after:ngc && webpack --progress",
+    "build-dev": "yarn run build:dev-client-and-server-bundles && yarn run webpack:server",
+    "build:client-and-server-bundles": "node --max_old_space_size=8192 node_modules/@angular/cli/bin/ng build --prod --env=${ENV_CONFIG} && node --max_old_space_size=8192 node_modules/@angular/cli/bin/ng build --prod --env=${ENV_CONFIG} --app 1 --output-hashing=false",
+    "build:dev-client-and-server-bundles": "node --max_old_space_size=8192 node_modules/@angular/cli/bin/ng build --prod --env=dev && node --max_old_space_size=8192 node_modules/@angular/cli/bin/ng build --prod --env=dev --app 1 --output-hashing=false",
+    "build": "yarn run build:client-and-server-bundles && yarn run webpack:server",
     "e2e": "ng e2e",
-    "heroku-postbuild": "node --max_old_space_size=8192 node_modules/@angular/cli/bin/ng build -prod --aot --env=${ENV_CONFIG} && gulp before:ngc && ngc && gulp after:ngc && webpack --progress",
+    "heroku-postbuild": "yarn run build",
     "lint": "ng lint",
-    "pree2e": "webdriver-manager update",
+    "ng": "ng",
     "start-dev": "ng serve",
     "start": "node dist/server.js",
-    "test": "ng test --single-run"
+    "test": "ng test",
+    "webpack:server": "webpack --config webpack.server.config.js --progress --colors"
   },
   "private": true,
   "dependencies": {
@@ -28,6 +31,7 @@
     "@angular/platform-browser": "5.0.1",
     "@angular/platform-server": "5.0.1",
     "@angular/router": "5.0.1",
+    "@nguniversal/module-map-ngfactory-loader": "^5.0.0-beta.5",
     "compression": "1.7.1",
     "cookie-parser": "1.4.3",
     "core-js": "2.5.1",
@@ -54,22 +58,22 @@
     "classlist.js": "1.1.20150312",
     "codelyzer": "4.0.1",
     "font-awesome": "4.7.0",
+    "gulp": "3.9.1",
     "gulp-clean": "0.3.2",
     "gulp-rename": "1.2.2",
     "gulp-sass": "3.1.0",
     "gulp-sequence": "0.4.6",
-    "gulp": "3.9.1",
     "hammerjs": "2.0.8",
     "intl": "1.2.5",
     "jasmine-core": "2.8.0",
     "jasmine-spec-reporter": "4.2.1",
     "jquery": "3.2.1",
+    "karma": "1.7.1",
     "karma-chrome-launcher": "2.2.0",
     "karma-cli": "1.0.1",
     "karma-coverage-istanbul-reporter": "1.3.0",
-    "karma-jasmine-html-reporter": "0.2.2",
     "karma-jasmine": "1.1.0",
-    "karma": "1.7.1",
+    "karma-jasmine-html-reporter": "0.2.2",
     "lodash": "4.17.4",
     "node-sass": "4.6.0",
     "postcss-loader": "2.0.8",
@@ -79,12 +83,12 @@
     "ts-helpers": "1.1.2",
     "ts-loader": "3.1.1",
     "ts-node": "3.3.0",
-    "tslint-misc-rules": "3.2.1",
     "tslint": "5.8.0",
+    "tslint-misc-rules": "3.2.1",
     "typescript": "2.4.2",
     "web-animations-js": "2.3.1",
     "webdriver-manager": "12.0.6",
-    "webpack-node-externals": "1.6.0",
-    "webpack": "3.8.1"
+    "webpack": "3.8.1",
+    "webpack-node-externals": "1.6.0"
   }
 }
