--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@angular/platform-browser": "5.0.1",
     "@angular/platform-server": "5.0.1",
     "@angular/router": "5.0.1",
+    "@nguniversal/express-engine": "^5.0.0-beta.5",
     "@nguniversal/module-map-ngfactory-loader": "^5.0.0-beta.5",
     "compression": "1.7.1",
     "cookie-parser": "1.4.3",
