specify cache-loader version

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@agm/core": "^1.0.0-beta.2",
     "@angular/animations": "^5.0.0",
     "@angular/cli": "^1.6.0",
+    "cache-loader": "1.2.0",
     "@angular/common": "^5.0.0",
     "@angular/compiler": "^5.0.0",
     "@angular/compiler-cli": "^5.0.0",
